...
            .padding(.horizontal, K.UI.Space.normal)
            HStack {
                Spacer()
                Button {
                    switchToLextLesson()
                } label: {
                    Text("Next Lesson")
                    Image(systemName: "chevron.right")
                        .font(.system(size: 22, weight: .medium))
                }
                .padding(.trailing, K.UI.Space.normal)
                .padding(.top, K.UI.Space.normal)
                .opacity(nextLessonAvailable ? 1 : 0)
...
        }
        if dataModel.activeDownload == nil && !dataModel.localFileExistsForUrlString(lesson.video_url) {
            Button {
                dataModel.downloadFromUrlString(lesson.video_url)
            } label: {
                Image(systemName: "icloud.and.arrow.down")
                Text("Download")
            }
        }
    }
}

struct CircularProgressView: View {
...
