...
                                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="puo-jH-VO7">
                                        <rect key="frame" x="32" y="104" width="536" height="4"/>
                                    </progressView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dex-ns-t5S">
                                        <rect key="frame" x="222.66666666666663" y="140" width="155" height="35"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Cancel download"/>
                                        <connections>
                                            <action selector="cancelDownload" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Zud-sc-pia"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
